# opengl-fireworks-demo

./: .gitignore  CMakeLists.txt
lib/glew-2.1.0/: glew.pc
res/shaders/: firework.fragment.glsl  firework.vertex.glsl  island.fragment.glsl  island.vertex.glsl  ocean.fragment.glsl  ocean.vertex.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  firework.cpp  firework.h  fs.cpp  fs.h  island.cpp  island.h  main.cpp  model.cpp  model.h  ocean.cpp  ocean.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h  xobject.h
